letmebuy: Adjust version database, refactor code