@@ -2,6 +2,7 @@ package com.rafaelvieira.letmebuy.utils;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -12,12 +13,7 @@ import java.util.List;
 public class URL {
 
     public static String decodeParam(String s) {
-        try {
-            return URLDecoder.decode(s, "UTF-8");
-        }
-        catch (UnsupportedEncodingException e) {
-            return "";
-        }
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
 
     public static List<Long> decodeIntList(String s) {
